faq-heading-changes-registrations-ui-changes-10012024

--- a/NationalSymposium/Connection.config
+++ b/NationalSymposium/Connection.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <connectionStrings>
-	<add name="NSSWCIConnectionString" connectionString="Integrated Security=true;Initial Catalog=NSSWCI;Data Source=DESKTOP-HKML31V\MSSQLSERVER01"
+	<add name="NSSWCIConnectionString" connectionString="Integrated Security=true;Initial Catalog=NSSWCI;Data Source=DESKTOP-BVT22HA\MSSQLSERVER01"
   providerName="System.Data.SqlClient" />
 <!-- <add name="NSSWCIConnectionString" connectionString="Integrated Security=true;Initial Catalog=NSSWCI;Data Source=LAPTOP-G28Q5T8K"
   providerName="System.Data.SqlClient" />-->
